* Updated Overflow issue in ios devies.

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,6 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
   --background-end-rgb: 255, 255, 255;
-  overflow-y: hidden;
+  overflow: hidden;
   transition: all 0.3s ease-out;
 }
